--- a/.github/workflows/ruby_on_rails.yml
+++ b/.github/workflows/ruby_on_rails.yml
@@ -32,7 +32,19 @@ jobs:
       - name: Run tests
         run: bundle exec rspec
 
-  lint:
+  code_quality:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf
+        with:
+          bundler-cache: true
+      - name: Code quality by Rubocop
+        run: bundle exec rubocop --parallel
+
+  security:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -43,5 +55,3 @@ jobs:
           bundler-cache: true
       - name: Security audit by Brakeman
         run: bundle exec brakeman -q -w2
-      - name: Code quality by Rubocop
-        run: bundle exec rubocop --parallel
